--- a/diamm/static/stylesheets/_footer.scss
+++ b/diamm/static/stylesheets/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  border-top: 1px solid $diamm-black;
+  border-top: 3px double $diamm-med-grey;
   background: $diamm-white;
   height: 100px;
   padding: 1.25rem;
