--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -1,19 +1,21 @@
-<nav role="navigation" class="navbar">
-    <ul class="navbar-list navbar-brand pull-left">
-        <li>
-            <a href="{{ url('home') }}"><img src="{{ static('images/diammlogo.png') }}" /></a>
-        </li>
-    </ul>
-    <ul class="navbar-list pull-left">
-        <li class="navbar-item"><a href="#">About</a></li>
-        <li class="navbar-item"><a href="{{ url('search') }}">Search</a></li>
-        <li class="navbar-item"><a href="#">Browse</a></li>
-    </ul>
-    <ul class="navbar-list pull-right">
-        <li class="navbar-item navbar-highlight"><a href="#">Donate</a></li>
-        <li class="navbar-item"><a href="#">Login</a></li>
-    </ul>
-</nav>
+<header class="site-header">
+    <nav role="navigation" class="navbar">
+        <ul class="navbar-list navbar-brand pull-left">
+            <li>
+                <a href="{{ url('home') }}"><img src="{{ static('images/diammlogo.png') }}" /></a>
+            </li>
+        </ul>
+        <ul class="navbar-list pull-left">
+            <li class="navbar-item"><a href="#">About</a></li>
+            <li class="navbar-item"><a href="{{ url('search') }}">Search</a></li>
+            <li class="navbar-item"><a href="#">Browse</a></li>
+        </ul>
+        <ul class="navbar-list pull-right">
+            <li class="navbar-item navbar-highlight"><a href="#">Donate</a></li>
+            <li class="navbar-item"><a href="#">Login</a></li>
+        </ul>
+    </nav>
+</header>
 
 {# <nav class="navbar navbar-default diamm-navbar">
     <div class="container-fluid">
