--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -63,7 +63,7 @@
     .navbar-highlight {
       background: $diamm-red;
       a {
-        color: $diamm-white;
+        color: #fff;
         &:hover, &:focus {
           background: $diamm-black;
         }
