--- a/diamm/templates/website/source/source_images_block.jinja2
+++ b/diamm/templates/website/source/source_images_block.jinja2
@@ -1,19 +1,11 @@
 <div class="tab-panel row" id="images">
-    <div class="sixteen columns">
-        <table>
-            <tbody>
-                {% for page in content.pages %}
-                    <tr>
-                    <td>
-                        {{ loop.index }}
-                        {% for image in page.image_urls %}
-                            <img src="{{ image }}/full/150,/0/default.jpg" />
-                        {% endfor %}
-                        {{ page.numeration }}
-                    </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="six columns">
+        <div id="image-item-listing">
+            &nbsp;
+        </div>
+    </div>
+
+    <div class="ten columns">
+        <div id="diva-wrapper"></div>
     </div>
 </div>
