--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -31,7 +31,9 @@
             <ul>
                 <li><a class="tab active" href="#details">Details</a></li>
                 <li><a class="tab" href="#inventory">Inventory</a></li>
+                {% if content.public_images %}
                 <li><a class="tab" href="#images">Images</a></li>
+                {% endif %}
                 <li><a class="tab" href="#bibliography">Bibliography</a></li>
             </ul>
         </div>
@@ -40,7 +42,9 @@
         <div class="sixteen columns">
             {% include "website/source/source_detail_block.jinja2" %}
             {% include "website/source/source_inventory_block.jinja2" %}
+            {% if content.public_images %}
             {% include "website/source/source_images_block.jinja2" %}
+            {% endif %}
             {% include "website/source/source_bibliography_block.jinja2" %}
         </div>
     </div>
