Added notation types, texts and voices

--- a/diamm/templates/website/source/source_bibliography_block.jinja2
+++ b/diamm/templates/website/source/source_bibliography_block.jinja2
@@ -7,6 +7,9 @@
                 &Dagger;
                 {% endif %}
                 {{ entry.prerendered | safe }}
+                {% if entry.pages %}
+                pp. {{ entry.pages }}.
+                {% endif %}
             </p>
         {% endfor %}
         <hr />
