Updated facets, templates, etc.

--- a/diamm/static/stylesheets/_fonts.scss
+++ b/diamm/static/stylesheets/_fonts.scss
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Alegreya:400,400italic,700,700italic|Alegreya+Sans+SC:500,700,400|Alegreya+Sans:400,300,300italic,400italic,500,500italic,700italic,700);
 
 
-$menu-font: "Alegreya Sans SC", sans-serif;
+$menu-font: "Alegreya Sans", sans-serif;
 $small-caps: $menu-font;
 $sans-serif: "Alegreya Sans", sans-serif;
