--- a/diamm/templates/website/search/results/archive.jinja2
+++ b/diamm/templates/website/search/results/archive.jinja2
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<div>
     <h4>
-        <span class="label label-warning">
+        <span>
             <span class="fa fa-university"> Archive</span>
         </span>
         &nbsp;
