--- a/diamm/templates/website/search/results/composition.jinja2
+++ b/diamm/templates/website/search/results/composition.jinja2
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<div>
     <p>
-        <span class="label label-danger">
+        <span>
             <span class="fa fa-music"> Composition</span>
         </span>
         &nbsp;
