--- a/diamm/templates/website/auth/login.jinja2
+++ b/diamm/templates/website/auth/login.jinja2
@@ -1,17 +1,9 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-offset-4 col-md-4">
         <form action="{{ url("login") }}" method="post">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input class="form-control" id="username" name="username" placeholder="Username">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <input id="username" name="username" placeholder="Username">
+            <input type="password" id="password" name="password" placeholder="Password">
+            <button type="submit">Submit</button>
         </form>
-    </div>
 {% endblock %}
