--- a/diamm/templates/website/search/results/organization.jinja2
+++ b/diamm/templates/website/search/results/organization.jinja2
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<div>
     <p>
-        <span class="label label-info">
+        <span>
             <span class="fa fa-user"> Organization</span>
         </span>
         &nbsp;
