--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<div>
     <p>
-        <span class="label label-success">
+        <span>
             <span class="fa fa-book"> Source</span>
         </span>
         &nbsp;
