--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -4,7 +4,7 @@
             <span class="fa fa-book"> Source</span>
         </span>
         &nbsp;
-        <a href="{{ result.url }}">{{ result.name_s }}</a>
+        <a href="{{ result.url }}">{{ result.display_name_s }}</a>
     </p>
     {% if result.result_text %}
         <p>{{ result.result_text | safe }}</p>
