--- a/diamm/templates/website/composition/composition_detail.jinja2
+++ b/diamm/templates/website/composition/composition_detail.jinja2
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h1>{{ content.name }}</h1>
+                <h1>{{ content.title }}</h1>
             </div>
         </div>
         <div class="row">
