Use https for placeholdit

--- a/diamm/templates/website/blocks/front_carousel.jinja2
+++ b/diamm/templates/website/blocks/front_carousel.jinja2
@@ -1,4 +1,4 @@
-<img src="http://placehold.it/1800x400" alt="..." class="u-full-width">
+<img src="https://placehold.it/900x400" alt="..." class="u-full-width">
 
 {# <div id="diamm-carousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
