Update to stylesheets

--- a/diamm/static/stylesheets/_fonts.scss
+++ b/diamm/static/stylesheets/_fonts.scss
@@ -2,5 +2,5 @@
 
 
 $menu-font: "Alegreya Sans", sans-serif;
-$small-caps: $menu-font;
+$small-caps: "Alegreya Sans SC", sans-serif;
 $sans-serif: "Alegreya Sans", sans-serif;
